--- a/scheduler.yml
+++ b/scheduler.yml
@@ -1,16 +1,17 @@
----
 - name: Schedule Cinder Volume Backup Jobs on AWX
   hosts: localhost
-  connection: local  # ← FONDAMENTALE
+  connection: local
   gather_facts: false
-
+  
   vars:
-    awx_host: "https://abcd-123-45-67-89.ngrok-free.app"  # ← il tuo ngrok URL
+    # CORREZIONE: Usa esplicitamente HTTP per la connessione interna tra pod
+    awx_host: "http://awx-demo-service" 
     awx_user: "admin"
     awx_password: "1234" 
     awx_validate_certs: false
 
   tasks:
+    # Tutti i task restano uguali, usano le variabili aggiornate
     - name: Create AWX job template for volume backup
       awx.awx.job_template:
         name: "Cinder Volume Backup"
@@ -19,8 +20,9 @@
         inventory: "OpenStack Inventory"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
-        validate_certs: "{{ awx_validate_certs }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
+        validate_certs: "{{ awx_validate_certs }}" 
 
     - name: Create AWX schedule for daily backup
       awx.awx.schedule:
@@ -29,7 +31,8 @@
         rrule: "DTSTART;TZID=UTC:20251009T000000 RRULE:FREQ=DAILY;INTERVAL=1"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
         validate_certs: "{{ awx_validate_certs }}"
 
     - name: Create AWX schedule for weekly backup
@@ -39,6 +42,6 @@
         rrule: "DTSTART;TZID=UTC:20251009T000000 RRULE:FREQ=WEEKLY;INTERVAL=1;BYDAY=MO"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
         validate_certs: "{{ awx_validate_certs }}"
-
