--- a/scheduler.yml
+++ b/scheduler.yml
@@ -5,11 +5,13 @@
   gather_facts: false
 
   vars:
-    awx_host: "https://abcd-123-45-67-89.ngrok-free.app"  # ← il tuo ngrok URL
-    awx_token: "4yMLwb0CljM93Qf4KqUroMRITgj3eSZg"                     # ← token da AWX
+    awx_host: "http://awx-demo-service"  # ← il tuo ngrok URL
+    awx_user: "admin"
+    awx_password: "1234"     
     awx_validate_certs: false
 
   tasks:
+    # Tutti i task restano uguali, usano le variabili aggiornate
     - name: Create AWX job template for volume backup
       awx.awx.job_template:
         name: "Cinder Volume Backup"
@@ -18,8 +20,9 @@
         inventory: "inventory-backup-test"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
-        validate_certs: "{{ awx_validate_certs }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
+        validate_certs: "{{ awx_validate_certs }}" 
 
     - name: Create AWX schedule for daily backup
       awx.awx.schedule:
@@ -28,7 +31,8 @@
         rrule: "DTSTART;TZID=UTC:20251009T000000 RRULE:FREQ=DAILY;INTERVAL=1"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
         validate_certs: "{{ awx_validate_certs }}"
 
     - name: Create AWX schedule for weekly backup
@@ -38,5 +42,6 @@
         rrule: "DTSTART;TZID=UTC:20251009T000000 RRULE:FREQ=WEEKLY;INTERVAL=1;BYDAY=MO"
         state: present
         controller_host: "{{ awx_host }}"
-        controller_oauthtoken: "{{ awx_token }}"
+        controller_username: "{{ awx_user }}"
+        controller_password: "{{ awx_password }}"
         validate_certs: "{{ awx_validate_certs }}"
