--- a/backup.yml
+++ b/backup.yml
@@ -1,6 +1,7 @@
 ---
 - name: Execute OpenStack Cinder Volume Backup
   hosts: localhost
+  connection: local
   gather_facts: false
   tasks:
     - name: Ensure OpenStack volume backup is created
