--- a/execution-environment.yml
+++ b/execution-environment.yml
@@ -5,7 +5,7 @@ dependencies:
 
 images:
   base_image:
-    name: quay.io/ansible/awx-ee:latest
+    name: quay.io/ansible/awx-ee:24.6.1  # ← usa lo stesso tag del tuo AWX
 
 additional_build_steps:
   append_final: |
