--- a/backup.yml
+++ b/backup.yml
@@ -4,10 +4,18 @@
   connection: local
   gather_facts: false
   tasks:
+    - name: Debug - Show volume_id received from ManageIQ
+      debug:
+        msg: "Creating backup for volume: {{ volume_id }}"
+    
     - name: Ensure OpenStack volume backup is created
       openstack.cloud.volume_backup:
-        volume: "{{ volume_id }}"  # Usa la variabile passata da AWX
+        volume: "{{ volume_id }}"
         state: present
-        force: true  # <=== FORZA IL BACKUP ANCHE SE IL VOLUME È IN USO
-        name: "backup-{{ volume_id }}-{{ lookup('pipe', 'date +%Y%m%d%H%M') }}" 
-      delegate_to: localhost
+        force: true
+        name: "backup-{{ volume_id }}-{{ ansible_date_time.iso8601_basic_short }}"
+      register: backup_result
+    
+    - name: Show backup result
+      debug:
+        msg: "Backup created successfully: {{ backup_result.backup.name }}"
