--- a/backup.yml
+++ b/backup.yml
@@ -1,14 +1,20 @@
----
 - name: Execute OpenStack Cinder Volume Backup
   hosts: localhost
   connection: local
-  gather_facts: true  # ← serve per ansible_date_time
+  gather_facts: true
+  vars:
+    # Usa target_id (fornito da ManageIQ) come volume_id
+    volume_id: "{{ target_id }}"
   tasks:
+    - name: Fail if volume_id is missing
+      assert:
+        that: volume_id is defined and volume_id | length > 0
+        fail_msg: "target_id not received from ManageIQ"
+
     - name: Debug - Show volume_id received from ManageIQ
       debug:
         msg: "Creating backup for volume: {{ volume_id }}"
-      tags: debug
-    
+
     - name: Ensure OpenStack volume backup is created
       openstack.cloud.volume_backup:
         volume: "{{ volume_id }}"
@@ -16,9 +22,8 @@
         force: true
         name: "backup-{{ volume_id }}-{{ ansible_date_time.iso8601_basic_short }}"
       register: backup_result
-    
+
     - name: Show backup result
       debug:
         var: backup_result.backup
       when: backup_result.backup is defined
-      tags: debug
