--- a/loadbalancer.yaml
+++ b/loadbalancer.yaml
@@ -6,23 +6,15 @@
     - openstack.cloud
   
   vars:
+    # ❌ RIMUOVI cloud_name
+    # cloud_name: openstack
     
-    # ✅ Valori OPZIONALI con default (se non arrivano da ManageIQ)
     protocol: "{{ protocol | default('TCP') }}"
     lb_algorithm_default: "{{ lb_algorithm | default('ROUND_ROBIN') }}"
-    
-    # 🤖 Valori GENERATI automaticamente da altre variabili
     listener_name: "{{ lb_name }}-listener"
     pool_name: "{{ lb_name }}-pool"
-    
-    # ❌ RIMUOVI QUESTI (devono arrivare da extra_vars):
-    # lb_name: awx-test-lb-l4-corretto
-    # lb_vip_subnet: "d126b00a-..."
-    # listener_port: 8080
-    # lb_members: [...]
   
   tasks:
-    # ✅ STEP 1: Valida che le variabili obbligatorie siano presenti
     - name: Validate required variables
       assert:
         that:
@@ -36,38 +28,26 @@
           - lb_members | length > 0
         fail_msg: |
           ❌ Variabili richieste mancanti o non valide!
-          Richieste:
-            - lb_name (stringa non vuota)
-            - lb_vip_subnet (UUID subnet)
-            - listener_port (numero 1-65535)
-            - lb_members (lista con almeno 1 elemento)
     
-    # ✅ STEP 2: Log della configurazione ricevuta
     - name: Log configuration
       debug:
         msg: |
           📋 Configurazione Load Balancer:
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           Nome: {{ lb_name }}
           Subnet VIP: {{ lb_vip_subnet }}
-          Protocollo: {{ protocol }}
-          Porta Listener: {{ listener_port }}
-          Algoritmo: {{ lb_algorithm_default }}
-          Membri Backend: {{ lb_members | length }} server(s)
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+          Porta: {{ listener_port }}
+          Membri: {{ lb_members | length }}
     
-    # ✅ STEP 3: Cleanup (opzionale, rimuovi se non serve)
     - name: Ensure no existing load balancer (cleanup)
       openstack.cloud.loadbalancer:
-        cloud: "{{ cloud_name }}"
+        # ❌ NON specificare cloud: "{{ cloud_name }}"
         name: "{{ lb_name }}"
         state: absent
       ignore_errors: yes
     
-    # ✅ STEP 4: Crea Load Balancer
     - name: Create Load Balancer
       openstack.cloud.loadbalancer:
-        cloud: "{{ cloud_name }}"
+        # ❌ NON specificare cloud
         name: "{{ lb_name }}"
         vip_subnet: "{{ lb_vip_subnet }}"
         state: present
@@ -75,14 +55,9 @@
         timeout: 800
       register: lb_created
     
-    - name: Log LB creation result
-      debug:
-        msg: "✅ Load Balancer creato: {{ lb_created }}"
-    
-    # ✅ STEP 5: Crea Listener
     - name: Create TCP Listener
       openstack.cloud.lb_listener:
-        cloud: "{{ cloud_name }}"
+        # ❌ NON specificare cloud
         load_balancer: "{{ lb_name }}"
         name: "{{ listener_name }}"
         protocol: "{{ protocol | upper }}"
@@ -90,16 +65,10 @@
         state: present
         wait: yes
         timeout: 120
-      register: listener_created
     
-    - name: Log Listener creation result
-      debug:
-        msg: "✅ Listener creato: {{ listener_name }} sulla porta {{ listener_port }}"
-    
-    # ✅ STEP 6: Crea Pool
     - name: Create TCP Pool
       openstack.cloud.lb_pool:
-        cloud: "{{ cloud_name }}"
+        # ❌ NON specificare cloud
         listener: "{{ listener_name }}"
         name: "{{ pool_name }}"
         protocol: "{{ protocol | upper }}"
@@ -107,16 +76,10 @@
         state: present
         wait: yes
         timeout: 120
-      register: pool_created
     
-    - name: Log Pool creation result
-      debug:
-        msg: "✅ Pool creato: {{ pool_name }} con algoritmo {{ lb_algorithm_default }}"
-    
-    # ✅ STEP 7: Aggiungi membri al pool
     - name: Add members to pool
       openstack.cloud.lb_member:
-        cloud: "{{ cloud_name }}"
+        # ❌ NON specificare cloud
         pool: "{{ pool_name }}"
         name: "member-{{ item.address }}-{{ item.protocol_port }}"
         address: "{{ item.address }}"
@@ -124,73 +87,22 @@
         subnet_id: "{{ lb_vip_subnet }}"
         state: present
       loop: "{{ lb_members }}"
-      register: members_added
     
-    - name: Log members added
-      debug:
-        msg: "✅ Membri aggiunti al pool: {{ lb_members | map(attribute='address') | list }}"
-    
-    # ✅ STEP 8: Ottieni informazioni sul VIP
-    - name: Get Load Balancer info
+    - name: Get Load Balancer info (con CLI)
       command: >
-        openstack --os-cloud {{ cloud_name }}
-        loadbalancer show {{ lb_name }}
-        -f json
+        openstack loadbalancer show {{ lb_name }} -f json
       register: lb_info_json
       changed_when: false
+      # Per la CLI serve specificare --os-cloud o usare env vars
     
     - set_fact:
         lb_info: "{{ lb_info_json.stdout | from_json }}"
     
-    # ✅ STEP 9: (Opzionale) Assegna Floating IP
-    - name: Floating IP management
-      when: assign_floating_ip | default(false) | bool
-      block:
-        - name: Allocate Floating IP
-          command: >
-            openstack --os-cloud {{ cloud_name }}
-            floating ip create {{ floating_ip_network | default('external_pub_vlan20') }}
-            -f value -c id
-          register: fip_id
-          changed_when: true
-        
-        - name: Associate Floating IP to LB VIP port
-          command: >
-            openstack --os-cloud {{ cloud_name }}
-            floating ip set --port {{ lb_info.vip_port_id }}
-            {{ fip_id.stdout }}
-          changed_when: true
-        
-        - name: Get Floating IP address
-          command: >
-            openstack --os-cloud {{ cloud_name }}
-            floating ip show {{ fip_id.stdout }}
-            -f value -c floating_ip_address
-          register: fip_public_ip
-          changed_when: false
-        
-        - name: Show final summary with Floating IP
-          debug:
-            msg: |
-              ✅✅✅ Load Balancer COMPLETATO ✅✅✅
-              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-              📛 Nome: {{ lb_name }}
-              🔒 VIP Interno: {{ lb_info.vip_address }}
-              🌐 Floating IP Pubblico: {{ fip_public_ip.stdout }}
-              🚪 Porta: {{ listener_port }}
-              🖥️  Backend Servers: {{ lb_members | map(attribute='address') | list }}
-              ⚖️  Algoritmo: {{ lb_algorithm_default }}
-              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-    
-    - name: Show final summary without Floating IP
-      when: not (assign_floating_ip | default(false) | bool)
+    - name: Show final summary
       debug:
         msg: |
           ✅✅✅ Load Balancer COMPLETATO ✅✅✅
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           📛 Nome: {{ lb_name }}
-          🔒 VIP Interno: {{ lb_info.vip_address }}
+          🔒 VIP: {{ lb_info.vip_address }}
           🚪 Porta: {{ listener_port }}
-          🖥️  Backend Servers: {{ lb_members | map(attribute='address') | list }}
-          ⚖️  Algoritmo: {{ lb_algorithm_default }}
-          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+          🖥️  Backend: {{ lb_members | map(attribute='address') | list }}
